[package]
name = "otlp-metrics-exporter"
version = "0.1.0"
edition = "2021"
description = "Simple/no dependency opentelemetry metrics exporter as json for metrics crate"
license-file = "LICENSE"
repository = "https://github.com/songokas/otlp-metrics-exporter"

[dependencies]
json = "0.12"
metrics = "0.24"
tracing = "0.1"
